--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,9 @@ footer {
 
 ul {
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .pokemon-button {
