--- a/css/styles.css
+++ b/css/styles.css
@@ -54,15 +54,16 @@ footer {
 ul {
     list-style: none;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .pokemonbutton {
     background-color: #425a59;
-    color: #fff;
+    color: var(--primary-color);
     border-radius: 5%;
-    border: 5px solid #000;
+    border: 1px solid #000;
+    margin: 5px;
     padding: var(--common-padding);
 }
 
