--- a/css/styles.css
+++ b/css/styles.css
@@ -67,35 +67,40 @@ ul {
     padding: var(--common-padding);
 }
 
-.modal {
+.modal:not(.modal-close) {
     margin: auto;
-    display: inline-block;
+    display: grid;
+    justify-content: center;
     box-sizing: border-box;
     background: #fff;
     padding: 15px;
     width: 100%;
     max-width: 700px;
     text-align: left;
+    float: center;
   }
 
 .modal-container {
     display: none;
 }
 
-.modal-containter.is-visible {
+.modal-container.is-visible {
+    position: fixed;
     margin: auto;
     display: block;
     box-sizing: border-box;
-    background-color: #fff;
+    background-color: rgb(82, 79, 79);
     padding: 15px;
     width: 100%;
-    max-width: 700px;
+    height: 100%;
     text-align: left;
 }
 
 .modal-close {
-    float: right;
+   justify-self: right;
+    --webkit-appearance: none;
     border: 0;
     background: none;
-    color: var(--primary-color);
+    color: #000;
+    text-decoration: underline;
 }
