--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
 h1 {
     justify-self: flex-end;
     align-self: center;
-    color: var(--title-color);
+    color: #000;
 }
 
 footer {
